# Online-store

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
megano/api/: urls.py  views.py
megano/auth_user/: admin.py  models.py  serializers.py  urls.py  views.py
megano/auth_user/migrations/: 0001_initial.py
megano/basket/: admin.py  models.py  serializers.py  urls.py  views.py
megano/basket/migrations/: 0001_initial.py
megano/catalog/: admin.py  common.py  models.py  serializers.py  urls.py  views.py
megano/catalog/migrations/: 0001_initial.py
megano/megano/: asgi.py  settings.py  urls.py
megano/order/: admin.py  models.py  serializers.py  urls.py  views.py
megano/order/migrations/: 0001_initial.py
megano/product/: admin.py  models.py  serializers.py  urls.py  views.py
megano/product/migrations/: 0001_initial.py  0002_alter_product_price_alter_product_saleprice.py
megano/review/: models.py
megano/review/migrations/: 0001_initial.py
megano/specification/: admin.py  apps.py  models.py
megano/specification/migrations/: 0001_initial.py
megano/tag/: admin.py  models.py  serializers.py  urls.py  views.py
megano/tag/migrations/: 0001_initial.py
